@@ -1,3 +1,7 @@
+2009-11-14 Chris Allegretta <chrisa@asty.org>
+	* move.c (do_first_line, do_last_line): Just set edit_refresh_needed rather than 
+	  get messy.
+
 2009-11-13 Chris Allegretta <chrisa@asty.org>
 	* winio.c: Add new static maxsize to be able to easier calculation with
 	  softwrap.
